--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"koa-router": "^7.0.0",
 		"lodash": "^4.17.11",
 		"menhera": "^0.8.1-rc1",
+		"pixiv-api-client": "^0.18.0",
 		"require-dir": "^1.1.0"
 	}
 }
