--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
-version: '2'
+version: "2"
 services:
-  py:
+  kom:
     image: "node:alpine"
-    restart: always 
+    restart: always
     working_dir: /home/node/app
     command: npm start
     environment:
@@ -10,26 +10,25 @@ services:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
     volumes:
-     - ./:/home/node/app
-    networks: 
+      - ./:/home/node/app
+    networks:
       - proxy
     ports:
-    - 8001:8001
-    depends_on: 
-    - redis
+      - 8001:8001
+    depends_on:
+      - redis
   redis:
     image: redis:alpine
-    restart: always 
-    networks: 
-    - proxy
-    ports: 
-    - 6379:6379
+    restart: always
+    networks:
+      - proxy
+    ports:
+      - 6379:6379
     volumes:
-        - redis-data:/data
+      - redis-data:/data
 volumes:
   redis-data:
 
-networks: 
+networks:
   proxy:
     external: true
-
